Simplify Concrete.Parameter hierarchy